--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Portfolio</a>
@@ -142,6 +142,11 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img src="./images/port-1.jpg" alt="Banking App" width="360" />
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Banking App</h3>
                 <p class="text">App</p>
@@ -153,6 +158,11 @@
                 alt="Cashless Payment"
                 width="360"
               />
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
@@ -160,6 +170,11 @@
             </li>
             <li class="portfolio-item">
               <img src="./images/port-3.jpg" alt="Meditation App" width="360" />
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Meditation App</h3>
                 <p class="text">App</p>
@@ -167,6 +182,12 @@
             </li>
             <li class="portfolio-item">
               <img src="./images/port-4.jpg" alt="Taxi Service" width="360" />
+
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Taxi Service</h3>
                 <p class="text">Marketing</p>
@@ -178,6 +199,11 @@
                 alt="Screen Illustrations"
                 width="360"
               />
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Screen Illustrations</h3>
                 <p class="text">Design</p>
@@ -185,6 +211,12 @@
             </li>
             <li class="portfolio-item">
               <img src="./images/port-6.jpg" alt="Online Courses" width="360" />
+
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <div class="portfolio-app">
                 <h3 class="title">Online Courses</h3>
                 <p class="text">Marketing</p>
