--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
       <!--Strategy-->
       <section class="section strategy">
         <div class="container">
-          <h2 class="visually-hidden">Our Strategy</h2>
+          <h2 class="section-title visually-hidden">Our Strategy</h2>
           <ul class="strategy-list">
             <li class="strategy-item">
+              <div class="strategy-box-icons">
+                <svg class="strategy-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="strategy-item">
+              <div class="strategy-box-icons">
+                <svg class="strategy-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="strategy-item">
+              <div class="strategy-box-icons">
+                <svg class="strategy-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="text">
                 Research and confirm brands with the strongest digital growth
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="strategy-item">
+              <div class="strategy-box-icons">
+                <svg class="strategy-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -109,6 +129,36 @@
               <div class="team-name">
                 <h3 class="title team-title">Mark Guerrero</h3>
                 <p class="text team-text">Product Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -116,6 +166,36 @@
               <div class="team-name">
                 <h3 class="title team-title">Tom Ford</h3>
                 <p class="text team-text">Frontend Developer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -123,6 +203,36 @@
               <div class="team-name">
                 <h3 class="title team-title">Camila Garcia</h3>
                 <p class="text team-text">Marketing</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -130,6 +240,36 @@
               <div class="team-name">
                 <h3 class="title team-title">Daniel Wilson</h3>
                 <p class="text team-text">UI Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social social-link">
+                      <svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -141,11 +281,13 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/port-1.jpg" alt="Banking App" width="360" />
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img src="./images/port-1.jpg" alt="Banking App" width="360" />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Banking App</h3>
@@ -153,15 +295,17 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/port-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img
+                  src="./images/port-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Cashless Payment</h3>
@@ -169,11 +313,17 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/port-3.jpg" alt="Meditation App" width="360" />
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img
+                  src="./images/port-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Meditation App</h3>
@@ -181,12 +331,13 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/port-4.jpg" alt="Taxi Service" width="360" />
-
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img src="./images/port-4.jpg" alt="Taxi Service" width="360" />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Taxi Service</h3>
@@ -194,15 +345,17 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/port-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img
+                  src="./images/port-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Screen Illustrations</h3>
@@ -210,12 +363,17 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/port-6.jpg" alt="Online Courses" width="360" />
-
-              <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-box">
+                <img
+                  src="./images/port-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="text-overley">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-app">
                 <h3 class="title">Online Courses</h3>
@@ -227,14 +385,49 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-slogan">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-box">
+        <div class="slogan-box">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-slogan">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link social-link">
+                <svg class="social-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link social-link">
+                <svg class="social-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link social-link">
+                <svg class="social-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link social-link">
+                <svg class="social-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
