--- a/index.html
+++ b/index.html
@@ -131,28 +131,44 @@
                 <p class="text team-text">Product Designer</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://twitter.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -168,28 +184,44 @@
                 <p class="text team-text">Frontend Developer</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://twitter.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -205,28 +237,44 @@
                 <p class="text team-text">Marketing</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://twitter.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -242,28 +290,44 @@
                 <p class="text team-text">UI Designer</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://twitter.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social social-link">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="team-social social-link"
+                    >
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -399,28 +463,44 @@
           <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="footer-social-link social-link">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer-social-link social-link"
+              >
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link social-link">
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                class="footer-social-link social-link"
+              >
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link social-link">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="footer-social-link social-link"
+              >
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link social-link">
+              <a
+                href="https://ua.linkedin.com/"
+                target="_blank"
+                class="footer-social-link social-link"
+              >
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
